--- a/JS/데이터타입심화.md
+++ b/JS/데이터타입심화.md
@@ -2,7 +2,7 @@
 
 ### (1) 데이터 타입의 종류(기본형과 참조형)
 
-![Alt text](image.png)
+-  <img width="50%" src="https://teamsparta.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F46c5dbc8-07e9-4752-b31e-daf5e7f64622%2FUntitled.png?table=block&id=d9661aec-a221-410f-b3f2-1608506024ab&spaceId=83c75a39-3aba-4ba4-a792-7aefe4b07895&width=2000&userId=&cache=v2"/>
 
 [기본형과 참조형의 구분]
 
@@ -24,8 +24,8 @@
         1. 0과 1만 표현하는 비트를 모두 찾기는 부담
         2. 1개 → 2개 → … → 8개(새로운 단위 : byte)
         3. 바이트는 항상 메모리 주소값을 갖고 있다.
+        -  <img width="50%" src="https://teamsparta.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Fe86a3309-0dda-4114-b198-07b668d87c5a%2FUntitled.png?table=block&id=f9de1daa-54e8-460e-b8f4-cd543c81ff27&spaceId=83c75a39-3aba-4ba4-a792-7aefe4b07895&width=380&userId=&cache=v2"/>
         
-        ![Alt text](image-1.png)
         
     3. 메모리(memo + ry) : byte 단위로 구성
         1. 모든 데이터는 byte 단위의 식별자인 메모리 주소값을 통해서 서로 구분이 됩니다.
